Fix language selector alignment
Depending on the screen, it could appear a bit to the left of where it
was supposed to be.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -636,7 +636,10 @@ body > header,
 .top-links {
   background: $dark;
   font-size: $small-font-size;
-  padding-right: $line-height / 2;
+
+  > :first-child {
+    @include grid-column-gutter;
+  }
 
   a {
     color: inherit;
