--- a/app/assets/stylesheets/layout/locale_switcher.scss
+++ b/app/assets/stylesheets/layout/locale_switcher.scss
@@ -2,7 +2,6 @@
   @include has-fa-icon(angle-down, solid, after);
   float: left;
   margin-bottom: $line-height / 4;
-  margin-left: $line-height / 2;
   margin-top: $line-height / 4;
   position: relative;
 
